--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,7 +27,7 @@ jobs:
           dest: build
           prefix: sxtctl
           #targets: windows/386,windows/amd64,linux/386,linux/amd64,darwin/386,darwin/amd64
-          targets: linux/amd64
+          targets: linux/amd64,darwin/amd64
           v: true
           x: false
           ldflags: -s -w
