--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,16 +4,16 @@ default_language_version:
   python: python3
 repos:
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.19.0
+    rev: v2.42.1
     hooks:
       - id: commitizen
         stages: [commit-msg]
   - repo: https://github.com/gruntwork-io/pre-commit
-    rev: v0.1.15
+    rev: v0.1.20
     hooks:
       - id: helmlint
   - repo: https://github.com/gherynos/pre-commit-java
-    rev: v0.1.0
+    rev: v0.2.4
     hooks:
       - id: checkstyle
         args:
@@ -25,7 +25,7 @@ repos:
       - id: pmd
         exclude: ".*/src/test/.*"
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 2.1.5
+    rev: 3.0.0
     hooks:
       - id: forbid-binary
         exclude: ".*.(png|jpg|jpeg)$"
@@ -44,15 +44,15 @@ repos:
           - "2"
           - -ci
   - repo: https://github.com/markdownlint/markdownlint
-    rev: v0.11.0
+    rev: v0.12.0
     hooks:
       - id: markdownlint
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.0.0-rc.0
+    rev: v8.38.0
     hooks:
       - id: eslint
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.4.0
     hooks:
       - id: check-added-large-files
       - id: check-case-conflict
@@ -68,16 +68,16 @@ repos:
           - --pattern
           - '^(?!((fix|feature)\/[a-zA-Z0-9\-]+)$).*'
       - id: trailing-whitespace
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-go
-    rev: v1.0.1
+  - repo: https://github.com/mrtazz/checkmake.git
+    rev: 0.2.2
     hooks:
       - id: checkmake
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.10
+    rev: v1.5.1
     hooks:
       - id: forbid-tabs
         exclude: "^(Makefile|.*.mk|.*.go)$"
-  - repo: git://github.com/doublify/pre-commit-go
+  - repo: https://github.com/doublify/pre-commit-go
     rev: 208a4aaa7f86b44e961eaaea526743b920e187a0
     hooks:
       - id: fmt
@@ -89,7 +89,7 @@ repos:
       - id: fmt
       - id: cargo-check
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.26.3
+    rev: v1.30.0
     hooks:
       - id: yamllint
         exclude: ".*/templates/.*"
