--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
 site_name: sxtctl
 site_author: BTP
 theme: readthedocs
-copyright: Copyright &copy; 2021 Blockchain Technology Partners
+copyright: Copyright &copy; 2023 Paravela Limited
